--- a/package.json
+++ b/package.json
@@ -2,5 +2,26 @@
   "dependencies": {
     "inquirer": "^8.2.4",
     "jest": "^29.3.1"
-  }
+  },
+  "name": "team-profile-generator",
+  "version": "1.0.0",
+  "description": "homework ",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/konnyph/team-profile-generator.git"
+  },
+  "author": "Konny P Ho",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/konnyph/team-profile-generator/issues"
+  },
+  "homepage": "https://github.com/konnyph/team-profile-generator#readme"
 }
